# secure-infra

./: .gitignore  .goreleaser.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile.aegis  Dockerfile.control-plane  Dockerfile.host-agent  Dockerfile.nexus  Dockerfile.sentry  LICENSE  Makefile  README.md  ROADMAP.md  doca_hardware_test.go  docker-compose.yml  go.mod  go.sum  integration_test.go
.github/workflows/: release.yaml
archive/hello/: Makefile  Makefile.crypto  Makefile.flow  Makefile.ktls  hello_crypto.c  hello_doca.c  hello_doca_v2.c  hello_flow.c  hello_ktls_client.c  hello_ktls_server.c  hello_ktls_setup.sh  rust-pka-ffi-example.rs
cmd/aegis/: main.go
cmd/agent/: main.go
cmd/api/: main.go
cmd/bluectl/: main.go
cmd/host-agent/: main.go
cmd/keymaker/: main.go
cmd/sentry/: main.go
cmd/server/: main.go
deploy/: Dockerfile.agent  Dockerfile.api  install-agent.sh  install-host-agent.sh
deploy/docker/: docker-compose.yml
docs/: network-requirements.md  quickstart-emulator.md  security-review-checklist.md  setup-guide.md  version-check-spec.md
docs/guides/: discovery.md  local-dev-docker.md  quickstart-emulator.md  setup-hardware.md  testing-comch-vm.md
docs/reference/: bcm-gb200-nvl72-architecture.md  beyond-identity-domain-model.md  bluefield-cryptographic-primitives.md  bluefield-deployment-reality.md  bluefield-hardware-root-of-trust.md  cli-version.md  corim-research.md  discovery.md  doca-3.2-zerotrust-announcement.md  doca-stack-components.md  dpe-research.md  dts-research.md  hpc-ssh-key-vulnerability.md  mpi-acceleration-test-plan.md  mpi-history-and-security-gap.md  nvidia-management-tools-landscape.md  project-olympus-research.md
docs/reference/doca-samples/applications/virtiofs/: meson.build  virtiofs.c  virtiofs_core.c  virtiofs_core.h  virtiofs_device.c  virtiofs_device.h  virtiofs_manager.c  virtiofs_manager.h  virtiofs_mpool.c  virtiofs_mpool.h  virtiofs_params.json  virtiofs_request.c  virtiofs_request.h  virtiofs_thread.c  virtiofs_thread.h  virtiofs_utils.h
docs/reference/doca-samples/applications/virtiofs/dependencies/: meson.build
docs/reference/doca-samples/applications/virtiofs/nfs_fsdev/: nfs_fsdev.c  nfs_fsdev.h  nfs_fsdev_gpm.hpp  nfs_fsdev_gpt.hpp  nfs_fsdev_io_device.cpp  nfs_fsdev_io_device.h  nfs_fsdev_pipe.cpp  nfs_fsdev_pipe.h  nfs_fsdev_recovery.c  priv_nfs_fsdev.h
dpuemu/fixtures/: bf3-static.json
internal/aegis/: aegis_test.go  server.go
internal/agent/: config.go  server.go
internal/api/: authorization.go  authorization_e2e_test.go  credentials.go  credentials_test.go  host.go  hostcert.go  keymaker.go  keymaker_test.go  server.go  server_test.go  tenant_isolation_e2e_test.go  trust.go
internal/hostagent/: client.go  server.go  server_test.go  tmfifo.go  tmfifo_test.go
internal/sentry/: client.go  (+3 more)
scripts/: demo  install-demo
(+638 files in other folders)
